--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="solutions.css">
+        <!-- <link rel="stylesheet" href="solutions.css"> -->
         <meta charset="utf-8">
         <title>Effects and other stuff</title>
+        <link rel="stylesheet" href="student-solution.css">
     </head>
     <body>
         <div class="container">
